syntax = "proto3";

package ng;

import "common.proto";

service CaniotController {
  rpc Hello(HelloRequest) returns (HelloResponse) {}
  rpc HelloEmpty(Empty) returns (Empty) {}

  rpc RequestTelemetry(TelemetryRequest) returns (TelemetryResponse) {}
}

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string message = 1;
}

message TelemetryRequest {
  DeviceId did = 1;
  Endpoint endpoint = 2;
  float timeout = 3;
}

message TelemetryResponse {
  string message = 1;
}